# langchainx

./: .gitignore  README.md  pyproject.toml
src/LLM与私域数据的结合/1.文档加载/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py
src/LLM与私域数据的结合/2.文档分割/: CharacterTextSplitter_demo.py  NLTKTextSplitter_demo.py  RecursiveCharacterTextSplitter_demo1.py  RecursiveCharacterTextSplitter_demo2.py  SemanticChunker_demo.py  SpacyTextSplitter_demo.py
src/LLM与私域数据的结合/3.数据嵌入与向量存储/: CacheBackedEmbeddings_demo.py  Chroma_demo.py  embeddings_demo.py
src/LLM与私域数据的结合/4.检索/: EnsembleRetriever_demo.py  LLMChainExtractor_demo.py  LLMChainFilter_demo.py  LongContextReorder_demo.py  MultiQueryRetriever_demo.py  MultiVectorRetriever_demo.py  SelfQueryRetrieverSelfQueryRetriever_demo.py  base_retriever_demo.py  demo.py
src/LLM与私域数据的结合/5.文档总结/: MapReduceDocumentsChain_demo.py  RefineDocumentsChain_demo.py  StuffDocumentsChain_demo.py
src/LLM与私域数据的结合/6.如何评估RAG系统/: TestGenetator_demo.py  demo.py
src/Memory/: LCELMemory.py  demo1.py
src/demo1/: bot.py  data.py
src/demo1_shadow/: bot.py
src/demo2/: server.py
src/demo3/: CommaSeparatedListOutputParser.py  PydanticOutputParser.py  StructuredOutputParser.py
src/demo4/: LCEL_demo.py  bind_tools.py  pydantic_tool.py  runnable_lambda.py
src/openai/: 4o.py
src/tools/: callable_demo.py  freeType.py  imgMark.py  isZip.py  multiprocess.py  numpyp.py  oswalk.py  pillow.py  process_pool.py  psd.py  queue_demo.py  removechar.py  rename.py  rename_new.py  runnable_demo.py  tests.py  thread_demo.py  thread_pool.py  unzip.py  zip.py
(+2 files in other folders)
